--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <header id="header"></header>
-    <div id="crosshair-cursor" />
+    <div id="crosshair-cursor"></div>
+    <button id="test-button">TEST BUTTON</button>
     <footer id="footer"></footer>
   </body>
   <script src="index.js"></script>
