Refactored virtual cursor to use transforms and spin on button click

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <header id="header"></header>
     <div id="crosshair-cursor"></div>
-    <button id="test-button">TEST BUTTON</button>
+    <button id="test-button-1">TEST BUTTON</button>
+    <button id="test-button-2">TEST BUTTON</button>
+    <button id="test-button-3">TEST BUTTON</button>
+    <button id="test-button-4">TEST BUTTON</button>
+    <button id="test-button-5">TEST BUTTON</button>
     <footer id="footer"></footer>
   </body>
   <script src="index.js"></script>
